--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yosua Works - Gen-Z Photography Studio</title>
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Crect x='4' y='12' width='24' height='16' rx='2' fill='none' stroke='%23ff6b6b' stroke-width='2'/%3E%3Ccircle cx='16' cy='20' r='4' fill='none' stroke='%234ecdc4' stroke-width='2'/%3E%3Crect x='12' y='8' width='8' height='4' rx='1' fill='%23ff6b6b'/%3E%3C/svg%3E">
+   <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
